--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,12 @@
-.App {
-  text-align: center;
+
+.Container{
+  position: relative;
+  margin-top:-20px;
+  width: 100%;
+  height: 600px;
+  background-size: 100% 100%;
+  background-image: url("./Images/IMG_5110.jpg");
+  background-position: center;
+  min-width: 600px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
