--- a/src/Header.css
+++ b/src/Header.css
@@ -1,11 +1,15 @@
 .Header{
-  opacity: .7;
+  position: absolute;
   width: 100%;
   height: 50px;
-  padding:15px;
-  background-color:black;
+  padding-top: 30px;
+  background-color:none;
+  text-align: center;
 }
 .Header h1{
+  font-family:'Arial Narrow Bold', sans-serif;
+  font-size: 80px;
   font-weight: bold;
   color: white;
+  margin-bottom: 0;
 }
