--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,8 @@
   background-size: 100% 100%;
   background-image: url("./Images/IMG_5110.jpg");
   background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   min-width: 600px;
 }
 
