--- a/src/Header.css
+++ b/src/Header.css
@@ -7,7 +7,7 @@
   text-align: center;
 }
 .Header h1{
-  font-family:'Arial Narrow Bold', sans-serif;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 80px;
   font-weight: bold;
   color: white;
