--- a/src/Who.css
+++ b/src/Who.css
@@ -1,15 +1,18 @@
 .info{
-    padding-top:40px;
+    padding-top:20px;
     padding-left: 70px;
     padding-right:70px;
     min-width: 600px;
 }
 
 h2{
+    font-size: 30px;
+    font-weight: bold;
     text-align: center;
-    font-family:helvetica;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 h4{
     text-align: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color:#BC0F0F;
 }
