--- a/src/Header.css
+++ b/src/Header.css
@@ -1,15 +1,44 @@
 .Header{
-  position: absolute;
+  position: absolute; 
   width: 100%;
   height: 50px;
-  padding-top: 30px;
   background-color:none;
   text-align: center;
 }
 .Header h1{
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  font-size: 80px;
+  font-size: 85px;
   font-weight: bold;
-  color: white;
+  font-style:italic;
+  color:#ffffff;
   margin-bottom: 0;
+  margin-top: 80px;
 }
+
+.navbar{
+  position: fixed;
+  width: 100%;
+  height: 80px;
+  background-color: black;
+}
+ul{
+  list-style-type: none;
+  display: inline-flex;
+}
+
+li{
+  padding-top:25px;
+  padding-right: 70px;
+  font-size:18px;
+}
+
+li a {
+  text-decoration: none;
+  color:grey;
+}
+
+li :hover{
+  color:#ffffff;
+  transition:color .5s ease;
+}
+
