--- a/src/Who.css
+++ b/src/Who.css
@@ -1,18 +1,39 @@
 .info{
-    padding-top:20px;
+    padding-top:100px;
     padding-left: 70px;
     padding-right:70px;
     min-width: 600px;
+    padding-bottom: 100px;
+    min-width: 1000px;
+}
+
+p{
+    font-size: 20px;
+    text-align: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    margin-bottom: 50px;
+    padding-bottom: 10px;
+    border-bottom-style: solid;
+    border-bottom-color: #000000;
+    margin-right:400px;
+    margin-left:400px;
 }
 
 h2{
-    font-size: 30px;
+    font-size: 60px;
     font-weight: bold;
+    font-style: italic;
     text-align: center;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+    color:#BC0F0F;
+    margin-right:200px;
+    margin-left:200px;
 }
 h4{
-    text-align: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color:#BC0F0F;
+    font-size: 26px;
+    text-align: justify;
+    font-family: 'arial narrow', arial;
+    letter-spacing: 3px;
+    margin-right:220px;
+    margin-left:220px;
 }
