make colors nice fix grid

--- a/src/Products.css
+++ b/src/Products.css
@@ -5,3 +5,30 @@ p{
 h1{
     text-align: center;
 }
+
+.grid{
+    top: 50%;
+    left: 50%;
+    margin-top: -20px;
+    margin-left: 250px;
+  
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+.column {
+  flex: 25%;
+  max-width: 100%;
+  padding: 5px;
+  padding-left:40px;
+}
+
+.column img {
+  margin-top: 8px;
+  margin-right:10px;
+  vertical-align: middle;
+}
