--- a/src/Who.css
+++ b/src/Who.css
@@ -1,10 +1,10 @@
 .info{
-    padding-top:100px;
+    padding-top:125px;
     padding-left: 70px;
     padding-right:70px;
-    min-width: 600px;
-    padding-bottom: 100px;
+    padding-bottom: 125px;
     min-width: 1000px;
+    background-color:#aa003b;
 }
 
 p{
@@ -25,7 +25,7 @@ h2{
     font-style: italic;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    color:#BC0F0F;
+    color:#ffffff;
     margin-right:200px;
     margin-left:200px;
 }
