--- a/src/Products.css
+++ b/src/Products.css
@@ -1,34 +1,77 @@
-p{
-    text-align: center;
+.Products{
+  padding-top:125px;
+  padding-bottom: 175px;
 }
 
-h1{
-    text-align: center;
+.Prod{
+  color:#a0033b
 }
-
+.desc{
+  font-size: 16px;
+  font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
+  text-align: center;
+  padding-bottom: 20px;
+}
 .grid{
-    top: 50%;
-    left: 50%;
-    margin-top: -20px;
-    margin-left: 250px;
-  
+  display:grid;
+  grid-gap:10px;
+  grid-template-columns: repeat(3,1fr);
+  grid-auto-rows: minmax(100px, auto);
+  padding-bottom: 10px;
+  text-align: center;
+  color:white;
+  margin-right:100px;
+  margin-left:100px;
 }
 
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0 4px;
+.grid h3{
+  bottom: 0px;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 30px;
+  padding-top:15px;
+  padding-bottom: 15px;
+  background:rgba(0,0,0,0.7);
 }
 
-.column {
-  flex: 25%;
-  max-width: 100%;
-  padding: 5px;
-  padding-left:40px;
+.Pic1{
+  grid-column: 1;
+  grid-row:1/6;
+  background-image: url('./Images/Hoddie.jpg');
+  background-size: cover;
+  background-position: center;
+  transition-duration: .6s;
+  margin-left:10px;
 }
 
-.column img {
-  margin-top: 8px;
+.Pic1:hover{
+  transition-duration: .5s ease;
+  background-image: url('');
+  background-color: #a0033b;
+}
+.Pic2{
+  grid-column: 2;
+  grid-row:1/6;
+  background-image: url('./Images/Bag.JPG');
+  background-size: cover;
+  background-position: center;
+  transition-duration: .6s;
+}
+
+.Pic2:hover{
+  transition-duration: .6s ease;
+  -webkit-filter:grayscale(1);
+  cursor: pointer;
+}
+
+.Pic3{
+  grid-column: 3;
+  grid-row:1/6;
+  background-image: url('./Images/Thing.JPG');
+  background-size:cover;
+  background-position: center;
+  transition-duration: .6s;
   margin-right:10px;
-  vertical-align: middle;
+}
+.Pic3:hover{
+  cursor: pointer;
 }
