--- a/src/AboutProds.css
+++ b/src/AboutProds.css
@@ -9,10 +9,6 @@
 }
 
 .AboutImage img {
-    -webkit-filter: blur(4px) grayscale(50%);
-    -moz-filter: blur(4px) grayscale(50%);
-    -ms-moz-filter: blur(4px) grayscale(50%);
-    filter: blur(4px) grayscale(50%);
     margin:-1px;
     padding:1px;
 }
@@ -29,54 +25,45 @@
 
 .grid_2 h3{
   font-size: 36px;
+  margin-bottom:20px;
 }
 
 .grid_2 p{
-
+  padding-right:60px;
+  padding-left:60px;
+  font-size: 18px;
 }
 
 .grid_2{
   display:grid;
-  grid-gap:10px;
+  grid-gap:20px;
   grid-template-columns: repeat(2,1fr);
-  grid-auto-rows: minmax(100px, auto);
+  grid-auto-rows: minmax(170px, auto);
   padding-bottom: 10px;
   text-align: center;
   color:white;
-  margin-top:50px;
-  margin-right:100px;
-  margin-left:100px;
+  margin-top:60px;
+  margin-right:150px;
+  margin-left:150px;
   min-width:600px;
 }
 .info1{
   grid-column: 1;
   grid-row:1/3;
-  background-size: cover;
-  background-position: center;
-  transition-duration: .6s;
   margin-left:10px;
 }
 .info2{
   grid-column: 2;
   grid-row:1/3;
-  background-size: cover;
-  background-position: center;
-  transition-duration: .6s;
   margin-left:10px;
 }
 .info3{
   grid-column: 2;
   grid-row:3/5;
-  background-size: cover;
-  background-position: center;
-  transition-duration: .6s;
   margin-left:10px;
 }
 .info4{
   grid-column: 1;
   grid-row:3/5;
-  background-size: cover;
-  background-position: center;
-  transition-duration: .6s;
   margin-left:10px;
 }
