Add favicon, change grid, change font

--- a/src/AboutProds.css
+++ b/src/AboutProds.css
@@ -5,7 +5,6 @@
 .AboutImage{
     position: relative;
     text-align: center;
-    overflow: hidden;
 }
 
 .AboutImage img {
@@ -32,6 +31,7 @@
   padding-right:60px;
   padding-left:60px;
   font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif
 }
 
 .grid_2{
