--- a/src/Header.css
+++ b/src/Header.css
@@ -8,11 +8,12 @@
 .Header h1{
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 85px;
-  font-weight: bold;
+  font-weight: 300;
   font-style:italic;
   color:#ffffff;
   margin-bottom: 0;
   margin-top: 80px;
+  letter-spacing: 30px;
 }
 
 .navbar{
