--- a/src/Who.css
+++ b/src/Who.css
@@ -6,9 +6,10 @@
 }
 
 .info p{
-    font-size: 20px;
+    color: #000000;
+    font-size: 30px;
     text-align: center;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     margin-bottom: 50px;
     border-bottom-style: solid;
     border-bottom-color: #000000;
@@ -27,10 +28,13 @@
     margin-left:200px;
 }
 .info h4{
-    font-size: 26px;
+    color:#ffffff;
+    font-size: 18px;
     text-align: justify;
-    font-family: 'arial narrow', arial;
+    font-family: sans-serif;
+    font-weight: 300;
     letter-spacing: 3px;
     margin-right:220px;
     margin-left:220px;
+    line-height: 1.48;
 }
