--- a/src/Products.css
+++ b/src/Products.css
@@ -1,7 +1,7 @@
 .Products{
   padding-top:125px;
   padding-bottom: 100px;
-  background-color:beige;
+  background-color:#fafafa;
 }
 
 .Prod{
@@ -41,7 +41,7 @@
 }
 .grid{
   display:grid;
-  grid-gap:6px;
+  grid-gap:40px;
   grid-template-columns: repeat(3,1fr);
   grid-auto-rows: minmax(100px, auto);
   padding-bottom: 10px;
