--- a/src/Who.css
+++ b/src/Who.css
@@ -6,13 +6,10 @@
 }
 
 .info p{
-    color: #000000;
-    font-size: 30px;
+    color: #ffffff;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: sans-serif;
     margin-bottom: 50px;
-    border-bottom-style: solid;
-    border-bottom-color: #000000;
     margin-right:400px;
     margin-left:400px;
 }
