--- a/src/AboutProds.css
+++ b/src/AboutProds.css
@@ -1,48 +1,73 @@
 .About{
-    background-color: #aa003b;
+    background-color: #fafafa;
 }
 
 .AboutImage{
-    position: relative;
-    text-align: center;
+  position: relative;
+  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('./Images/Gus.jpg');
+  background-size: cover;
+  width: 100%;
+  height: 600px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.AboutImage h2{
+  letter-spacing: 4px;
+  font-weight: 300;
+  font-size: 60px;
+  font-family: sans-serif;
+  position: absolute;
+  top:15%;
+  left:40%;
+  color:white;
 }
 
-.AboutImage img {
-    margin:-1px;
-    padding:1px;
-}
-
-.AboutImage h1{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    position: absolute;
-    font-size: 80px;
-    color: #ffffff;
-    top:40%;
-    left: 50%;
-    transform: translate(-50%, -50%)
+.About h1{
+  text-align: center;
+  margin-right: 260px;
+  margin-left: 260px;
+  letter-spacing: 4px;
+  font-weight: 300;
+  font-size: 28px;
+  font-family: sans-serif;
+  padding-top: 80px;
+  padding-bottom: 20px;
+  color:#aa003b;
+  border-bottom: 3px;
+  border-bottom-style: solid;
+  border-bottom-color:#777;
 }
 
 .grid_2 h3{
+  font-family: Arial, Helvetica, sans-serif;
+  color:Black;
   font-size: 36px;
+  font-weight: 400;
   margin-bottom:20px;
 }
 
 .grid_2 p{
   padding-right:60px;
   padding-left:60px;
-  font-size: 18px;
-  font-family: Arial, Helvetica, sans-serif
+  font-size: 16px;
+  text-align: center;
+  font-family: sans-serif;
+  font-weight: 200;
+  letter-spacing: 3px;
+  line-height: 1.48;
 }
 
 .grid_2{
   display:grid;
-  grid-gap:20px;
+  grid-gap:40px;
   grid-template-columns: repeat(2,1fr);
   grid-auto-rows: minmax(170px, auto);
-  padding-bottom: 10px;
+  padding-bottom: 200px;
   text-align: center;
-  color:white;
-  margin-top:60px;
+  color:#777;
+  margin-top:140px;
   margin-right:150px;
   margin-left:150px;
   min-width:600px;
@@ -66,4 +91,17 @@
   grid-column: 1;
   grid-row:3/5;
   margin-left:10px;
+}
+
+.fa-gift{
+  color:#aa003b;
+}
+.fa-leaf{
+  color:#aa003b;
+}
+.fa-handshake{
+  color:#aa003b;
+}
+.fa-accessible-icon{
+  color:#aa003b;
 }
