--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,19 @@
 .Container{
   position: relative;
   margin-top:-20px;
-  width: 100%;
+  width: auto;
+  max-width: 100%;
+  min-width: 600px;
   height: 800px;
-  background-size: 100% 100%;
-  background-image: url("./Images/IMG_5110.jpg");
+  background: linear-gradient( rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.4) ), url("./Images/IMG_5110.jpg");
+  background-color:#F0F0F0;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  min-width: 600px;
+  background-size: cover;
+}
+
+.Mexico{
+  background-color: grey
 }
 
