--- a/src/Products.css
+++ b/src/Products.css
@@ -1,7 +1,7 @@
 .Products{
   padding-top:125px;
   padding-bottom: 100px;
-  background-color:#fafafa;
+  background-color:white;
 }
 
 .Prod{
@@ -40,16 +40,19 @@
   padding-bottom: 20px;
 }
 .grid{
+  background-color: #f0f0f0;
   display:grid;
   grid-gap:40px;
   grid-template-columns: repeat(3,1fr);
   grid-auto-rows: minmax(100px, auto);
   padding-bottom: 10px;
   text-align: center;
-  color:white;
+  color:#f0f0f0;
+  padding-right: 50px;
+  padding-left: 50px;
   margin-right:200px;
   margin-left:200px;
-  min-width: 700px;
+  min-width: 500px;
 }
 
 .grid h3{
