--- a/src/Who.css
+++ b/src/Who.css
@@ -2,16 +2,18 @@
     padding-top:125px;
     padding-bottom: 220px;
     min-width: 1000px;
-    background-color:#aa003b;
+    background-color:white;
+    color:black;
 }
 
 .info p{
-    color: #ffffff;
+    color:#aa003b;
+    letter-spacing: 4px;
+    font-weight: 200;
+    font-size: 18px;
     text-align: center;
     font-family: sans-serif;
     margin-bottom: 50px;
-    margin-right:400px;
-    margin-left:400px;
 }
 
 .info h2{
@@ -20,14 +22,17 @@
     font-style: italic;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    color:#ffffff;
     margin-right:200px;
     margin-left:200px;
+    padding-bottom: 20px;
+    border-bottom: 3px;
+    border-bottom-style: solid;
+    border-bottom-color: #aa003b;
 }
 .info h4{
-    color:#ffffff;
+    color:#777;
     font-size: 18px;
-    text-align: justify;
+    text-align: center;
     font-family: sans-serif;
     font-weight: 300;
     letter-spacing: 3px;
