--- a/src/App.css
+++ b/src/App.css
@@ -8,13 +8,17 @@
   max-width: 100%;
   min-width: 600px;
   height: 800px;
-  background: linear-gradient( rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.4) ), url("./Images/IMG_5110.jpg");
+  /*background: -webkit-linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.4)), url("./Images/IMG_5110.jpg");
+  background: -moz-linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.4)), url("./Images/IMG_5110.jpg");
+  background: -o-linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.4)), url("./Images/IMG_5110.jpg");
+  background: linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.4)), url("./Images/IMG_5110.jpg");
+  */
   background-color:#F0F0F0;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-}
+}     
 
 .Mexico{
   background-color: grey
