--- a/src/Header.css
+++ b/src/Header.css
@@ -1,5 +1,5 @@
 .Header{
-  position: absolute; 
+  position: absolute;
   width: 100%;
   height: 50px;
   background-color:none;
@@ -17,7 +17,7 @@
 }
 */
 
-.Header img{
+.logo{
   margin-top:175px;
 
 }
@@ -27,7 +27,7 @@
   font-weight: 300;
   letter-spacing: 2px;
   position: fixed;
-  z-index: 99999;
+  z-index: 99998;
   width: 100%;
   height: 80px;
   background-color: black;
@@ -35,13 +35,14 @@
 }
     
 ul{
+  float: left;
   list-style-type: none;
   display: inline-flex;
 }
 
 li{
   padding-top:25px;
-  padding-right: 80px;
+  padding-right: 120px;
   font-size:18px;
 }
 
@@ -53,4 +54,9 @@ li a {
 li :hover{
   color:#ba003b;
   transition:color .3s ease;
+}
+.mini{
+  padding-left:50px;
+  padding-top:10px;
+  float:left;
 }
