--- a/src/Mexico.css
+++ b/src/Mexico.css
@@ -1,5 +1,4 @@
-.Recordar h1{
-    margin: 0px;
-    text-align: center;
-    height: 600px;
+.Recordar img{
+    max-width: 100%;
+    min-height: 550px;
 }
