--- a/src/Products_2.css
+++ b/src/Products_2.css
@@ -14,9 +14,11 @@
     margin-bottom: 30px;
 }
 .products h2{
-    color:#777;
     font-size: 30px;
     font-family: sans-serif;
+    color:#aa003b;
+    text-decoration: underline;
+    text-align: center;
     font-weight: 400;
     letter-spacing: 1.48;
     margin-top: 0px;
